@startuml
class Usuario {
	-AsesorDeImagen asesor
    -String mail
    -List<Accion> acciones

	+List<Atuendo> obtenerSugerencias()
	+void aplicarAcciones(List<Alerta> alertas)
    +void agregarAccion(Accion accion)
    +void eliminarAccion(Accion accion)
}

class RepositorioUsuarios {
    -List<Usuario> usuariosDelSistema
    -ServicioMeteorologico servicioMeteorologico

	+void actualizarSugerencias()
	+void actualizarAlertas()
}

interface ServicioMeteorologico {
	+List<Alerta> obtenerAlertas()
}

interface Accion {
	+void aplicar(Usuario usuario, List<Alerta> alertas)
}

class ActualizarSugerencia{
    +void aplicar(Usuario usuario, List<Alerta> alertas)
}

class AvisarTormenta{
    +void aplicar(Usuario usuario, List<Alerta> alertas)
}

class AvisarGranizo{
    +void aplicar(Usuario usuario, List<Alerta> alertas)
}

class MandarMailDeAlertas{
    +void aplicar(Usuario usuario, List<Alerta> alertas)
}

Usuario --> "*" Accion

RepositorioUsuarios --> "*" Usuario
RepositorioUsuarios --> "1" ServicioMeteorologico

AccuWeatherAPI ..|>  ServicioMeteorologico

ActualizarSugerencia ..|>  Accion
AvisarTormenta ..|>  Accion
AvisarGranizo ..|>  Accion
MandarMailDeAlertas ..|>  Accion

@enduml